# large-kernel-matting

./: CMakeLists.txt  README.md  main.cpp
include/cfmatting/: CGMattingSolver.h  ImageMatrix.h  ImageWindow.h  SATMatrix.h
include/io/: imageIO.h
include/matting/: CGMattingSolver.h  ImageMatrix.h  ImageWindow.h  SATMatrix.h
include/timer/: timer.h
results/apple/: logs.txt
results/beach/: logs.txt
results/lion/: logs.txt
results/tree/: logs.txt
results/trump/: logs.txt
src/cfmatting/: CGMattingSolver.cpp  ImageMatrix.cpp  ImageWindow.cpp  SATMatrix.cpp
src/io/: imageIO.cpp
src/matting/: CGMattingSolver.cpp  ImageMatrix.cpp  ImageWindow.cpp  SATMatrix.cpp
